Basic rotation works back and forth (for iPhone 6).

--- a/css/style.css
+++ b/css/style.css
@@ -118,3 +118,9 @@ div.device-ipad:after {
 .mdi-action-search {
     cursor: pointer;
 }
+
+.dropdown-button {
+    text-align: right;
+    width: 150px;
+}
+
